Tutorials now uses <hx> tags instead of <div class="">.

--- a/tutorials/Using_GAP/index.html
+++ b/tutorials/Using_GAP/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Using GAP</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Using GAP</div>
+<h1>Using GAP</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   GAP is an advanced tool to be able to create animations, this guide should give you some sort of
   view of how GAP works and what you can do with it. For a good tutorial of how to make an animation with GAP 
   then take a look at the "<a href="/tutorials/Advanced_Animations/">Advanced Animation</a>" tutorial.
 </p>
 
-<div class="subtitle">Main Interface</div>
+<h2>Main Interface</h2>
 <p class="images">
   <img src="gap-big.png" alt=""/>
 </p>
@@ -31,7 +31,7 @@
   0 means top of the layer stack, while lower values move the layer towards bottom of the image.
 </p>
 
-<div class="subtitle">Stepmode</div>
+<h2>Stepmode</h2>
 <p class="images">
   <img src="gap2-big.png" alt=""/>
 </p>
