Modified ChangeLog Site now uses <hx> instead of <div class=""> Moved
Modified ChangeLog
Site now uses <hx> instead of <div class="">
Moved example.html and example.ssi to /admin/

--- a/about/ChangeLogs/index.html
+++ b/about/ChangeLogs/index.html
@@ -2,7 +2,7 @@
 <title>GIMP - GIMP ChangeLog</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
-<div class="heading">GIMP Source ChangeLogs</div>
+<h1>GIMP Source ChangeLogs</h1>
 
   <fieldset>
   <legend><b>Released Versions</b></legend>
