--- a/about/awards.html
+++ b/about/awards.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Awards</div>
-<div class="subtitle">Subtitle goes here</div>
+<h1>Awards</h1>
+<h2>Subtitle goes here</h2>
 <p>
   Images and brief blurbs
 </p>
