--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">About GIMP</div>
-<div class="subtitle"><a href="introduction.html">Introduction to The GIMP</a></div>
+<h1>About GIMP</h1>
+<h2><a href="introduction.html">Introduction to The GIMP</a></h2>
 <p>
   GIMP is an acronym for GNU Image Manipulation Program. It
   is a freely distributed program for such tasks
@@ -14,7 +14,7 @@
   (<a href="introduction.html">more ...</a>)
 </p>
 <!--#include virtual="/includes/urls_important.inc" -->
-<div class="subtitle">GIMP History</div>
+<h2>GIMP History</h2>
   <ul>
     <li><a href="history.html">History of The GIMP</a></li>
     <li><a href="http://groups.google.com/groups?selm=petm-2907952329370001%40charnley.hip.berkeley.edu&amp;output=gplain">Two Questions</a></li>
@@ -24,27 +24,27 @@
     <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
     <li><a name="src-change12" href="ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
   </ul>
-<div class="subtitle">Splash Screens</div>
+<h2>Splash Screens</h2>
   <ul>
     <li><a href="splash-stable.html">Stable Splash Screens</a></li>
     <li><a href="splash-1.1.html">1.1 Tarball Splash Screens</a></li>
     <li><a href="splash-1.3.html">1.3 Tarball Splash Screens</a></li>
     <li><a href="splash-cvs.html">The Whole Repository of Splash Screens</a></li>
   </ul>
-<div class="subtitle">Awards won by The GIMP</div>
+<h2>Awards won by The GIMP</h2>
 <p>
   The GIMP has won several awards through time. For a list of the awards click 
   <a href="awards.html">here</a>.
 </p>
-<div class="subtitle">The GIMP Authors</div>
+<h2>The GIMP Authors</h2>
   <ul>
     <li><a name="src-authors" href="authors.html">Authors and Contributors</a></li>
     <li><a name="src-maintainers" href="MAINTAINERS">Maintainers</a></li>
     <li><a name="src-pmaintainers" href="PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
   </ul>
-<div class="subtitle"><a href="screenshots.html">Screen Shots</a></div>
-<div class="subtitle"><a href="mediakit.html">Media Kit</a></div><br/>
-<div class="subtitle">The GIMP in the Real World</div>
+<h2><a href="screenshots.html">Screen Shots</a></h2>
+<h2><a href="mediakit.html">Media Kit</a></h2><br/>
+<h2>The GIMP in the Real World</h2>
 <p>The GIMP In Education</p>
   <ul>
     <li><a href="FIXME">some news or report item</a></li>
