--- a/about/introduction.html
+++ b/about/introduction.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">About GIMP</div>
-<div class="subtitle">Introduction to the GIMP</div>
+<h1>About GIMP</h1>
+<h2>Introduction to the GIMP</h2>
 <p>
   GIMP is an acronym for GNU Image Manipulation Program. It
   is a freely distributed program for such tasks
@@ -30,7 +30,7 @@
   <a href="http://www.macgimp.org/">MacOS X</a>.
 </p>
 
-<div class="subtitle">Features and Capabilities</div>
+<h2>Features and Capabilities</h2>
 <p>
   This is only a very quickly thrown together list of GIMP features.
 </p>
