--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -3,168 +3,168 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Development Version Splash History</div>
-<div class="subtitle">The Whole Repository</div>
+<h1>Development Version Splash History</h1>
+<h2>The Whole Repository</h2>
 <table>
 <tr><td>
-  <div  class="subtitle">CVS:1.1</div>
+  <h2>CVS:1.1</h2>
   <a href="gimp1_1_splash-1.1.png"><img src="gimp1_1_splash-1.1-t.png" width="151" height="86" alt="1.1"/></a><br />
   <p>artist:  Adrian</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.2</div>
+  <h2>CVS: 1.2</h2>
   <a href="gimp1_1_splash-1.2.png"><img src="gimp1_1_splash-1.2-t.png" width="138" height="150" alt="1.2"/></a><br />
   <p>artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.3</div>
+  <h2>CVS: 1.3</h2>
   <a href="gimp1_1_splash-1.3.png"><img src="gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.4</div>
+  <h2>CVS: 1.4</h2>
   <a href="gimp1_1_splash-1.4.png"><img src="gimp1_1_splash-1.4-t.png" width="138" height="150" alt="1.4"/></a><br />
   <p>artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.5</div>
+  <h2>CVS: 1.5</h2>
   <a href="gimp1_1_splash-1.5.png"><img src="gimp1_1_splash-1.5-t.png" width="151" height="86" alt="1.5"/></a><br />
   <p>artist:  Adrian</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.6</div>
+  <h2>CVS: 1.6</h2>
   <a href="gimp1_1_splash-1.6.png"><img src="gimp1_1_splash-1.6-t.png" width="150" height="113" alt="1.6"/></a><br />
   <p>artist:  sterwill</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.7</div>
+  <h2>CVS: 1.7</h2>
   <a href="gimp1_1_splash-1.7.png"><img src="gimp1_1_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a><br />
   <p>artist:  Adrian</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.8</div>
+  <h2>CVS: 1.8</h2>
   <a href="gimp1_1_splash-1.8.png"><img src="gimp1_1_splash-1.8-t.png" width="150" height="146" alt="1.8"/></a><br />
   <p>artist:  Sven</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.9</div>
+  <h2>CVS: 1.9</h2>
   <a href="gimp1_1_splash-1.9.png"><img src="gimp1_1_splash-1.9-t.png" width="149" height="102" alt="1.9"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.10</div>
+  <h2>CVS: 1.10</h2>
   <a href="gimp1_1_splash.1.10.png"><img src="gimp1_1_splash.1.10-t.png" width="120" height="150" alt="1.10"/></a><br />
   <p>artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.11</div>
+  <h2>CVS: 1.11</h2>
   <a href="gimp1_1_splash.1.11.png"><img src="gimp1_1_splash.1.11-t.png" width="150" height="134" alt="1.11"/></a><br />
   <p>artist: tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.12</div>
+  <h2>CVS: 1.12</h2>
   <a href="gimp1_1_splash.1.12.png"><img src="gimp1_1_splash.1.12-t.png" width="120" height="150" alt="1.12"/></a><br />
   <p>artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.13</div>
+  <h2>CVS: 1.13</h2>
   <a href="gimp1_1_splash.1.13.png"><img src="gimp1_1_splash.1.13-t.png" width="150" height="135" alt="1.13"/></a><br />
   <p>artist:  adam</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.14</div>
+  <h2>CVS: 1.14</h2>
   <a href="gimp1_1_splash.1.14.png"><img src="gimp1_1_splash.1.14-t.png" width="150" height="135" alt="1.14"/></a><br />
   <p>artist:  adam</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.15</div>
+  <h2>CVS: 1.15</h2>
   <a href="gimp1_1_splash.1.15.png"><img src="gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a><br />
   <p>artist:  adam</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.16</div>
+  <h2>CVS: 1.16</h2>
   <a href="gimp1_1_splash.1.16.png"><img src="gimp1_1_splash.1.16-t.png" width="150" height="128" alt="1.16"/></a><br />
   <p>artist:  marc</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.17</div>
+  <h2>CVS: 1.17</h2>
   <a href="gimp1_1_splash.1.17.png"><img src="gimp1_1_splash.1.17-t.png" width="138" height="150" alt="1.17"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.18</div>
+  <h2>CVS: 1.18</h2>
   <a href="gimp1_1_splash.1.18.png"><img src="gimp1_1_splash.1.18-t.png" width="150" height="116" alt="1.18"/></a><br />
   <p>artist: Raphael</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.19</div>
+  <h2>CVS: 1.19</h2>
   <a href="gimp1_1_splash.1.19.png"><img src="gimp1_1_splash.1.19-t.png" width="119" height="150" alt="1.19"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.2</div>
+  <h2>CVS: 1.2</h2>
   <a href="gimp_splash.1.2.png"><img src="gimp_splash.1.2-t.png" width="120" height="150" alt="1.2"/></a><br />
   <p>artist: tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.3</div>
+  <h2>CVS: 1.3</h2>
   <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.4</div>
+  <h2>CVS: 1.4</h2>
   <a href="gimp_splash.1.4.png"><img src="gimp_splash.1.4-t.png" width="120" height="150" alt="1.4"/></a><br />
   <p>artist: tigert, Sven</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.5</div>
+  <h2>CVS: 1.5</h2>
   <a href="gimp_splash.1.5.png"><img src="gimp_splash.1.5-t.png" width="120" height="150" alt="1.5"/></a><br />
   <p>artist:  tigert, Sven</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.6</div>
+  <h2>CVS: 1.6</h2>
   <a href="gimp_splash.1.6.png"><img src="gimp_splash.1.6-t.png" width="150" height="102" alt="1.6"/></a><br />
   <p>artist: Gerald Brosseau</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.7</div>
+  <h2>CVS: 1.7</h2>
   <a href="gimp_splash.1.7.png"><img src="gimp_splash.1.7-t.png" width="150" height="102" alt="1.7"/></a><br />
   <p>artist:  Gerald Brosseau</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.8</div>
+  <h2>CVS: 1.8</h2>
   <a href="gimp_splash.1.8.png"><img src="gimp_splash.1.8-t.png" width="150" height="102" alt="1.8"/></a><br />
   <p>artist: Gerald Brosseau</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.9</div>
+  <h2>CVS: 1.9</h2>
   <a href="gimp_splash.1.9.png"><img src="gimp_splash.1.9-t.png" width="120" height="150" alt="1.9"/></a><br />
   <p>artist:  nomis</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.10</div>
+  <h2>CVS: 1.10</h2>
   <a href="gimp_splash.1.10.png"><img src="gimp_splash.1.10-t.png" width="150" height="84" alt="1.10"/></a><br />
   <p>artist:  Sven, garrett</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.11</div>
+  <h2>CVS: 1.11</h2>
   <a href="gimp_splash.1.11.png"><img src="gimp_splash.1.11-t.png" width="138" height="150" alt="1.11"/></a><br />
   <p>artist:  tigert</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.12</div>
+  <h2>CVS: 1.12</h2>
   <a href="gimp_splash.1.12.png"><img src="gimp_splash.1.12-t.png" width="102" height="150" alt="1.12"/></a><br />
   <p>artist:  nomis</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.1</div>
+  <h2>CVS: 1.1</h2>
   <a href="gimp_splash.gif"><img src="gimp_splash-t.png" width="149" height="112" alt="1.1"/></a><br />
   <p>artist:  nomis, Sven</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.2</div>
+  <h2>CVS: 1.2</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt="1.2"/></a><br />
   <p>artist:  nomis, Sven</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.3</div>
+  <h2>CVS: 1.3</h2>
   <a href="gimp_splashpng.1.3.png"><img src="gimp_splashpng.1.3-t.png" width="117" height="151" alt="1.3"/></a><br />
   <p>artist:  nomis, Sven</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.4</div>
+  <h2>CVS: 1.4</h2>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a><br />
   <p>artist:  Sven, Tim Pritlove</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">CVS: 1.5</div>
+  <h2>CVS: 1.5</h2>
   <a href="gimp_splashpng.1.5.png"><img src="gimp_splashpng.1.5-t.png" width="150" height="145" alt="1.5"/></a><br />
   <p>artist:  jimmac</p>
 </td><td>
-  <div  class="subtitle">CVS: 1.6</div>
+  <h2>CVS: 1.6</h2>
   <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.6-t.png" width="150" height="145" alt="1.6"/></a><br />
   <p>artist:  unknown</p>
 </td></tr>
