--- a/about/splash-stable.html
+++ b/about/splash-stable.html
@@ -3,15 +3,15 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Stable Version Splash History</div>
+<h1>Stable Version Splash History</h1>
 <table>
 <tr><td>
-  <div  class="subtitle">1.0.0-4</div>
+  <h2>1.0.0-4</h2>
   <a href="gimp1_1_splash.png"><img src="gimp1_1_splash-t.png" width="150" height="94" alt="1.5"/></a>
   <p>CVS: 1.1<br />
   artist:  jtl</p>
 </td><td>
-  <div  class="subtitle">1.2.0-4</div>
+  <h2>1.2.0-4</h2>
   <a href="gimp_splash.1.11.png"><img src="gimp_splash.1.11-t.png" width="138" height="150" alt="1.11"/></a>
   <p>CVS: 1.5 <br />
   artist:  Adrian</p>
