--- a/books/index.html
+++ b/books/index.html
@@ -3,9 +3,9 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Books about The GIMP</div>
+<h1>Books about The GIMP</h1>
 
-<div class="subtitle">Essential GIMP for Web Professionals</div>
+<h2>Essential GIMP for Web Professionals</h2>
 <p>
   <img class="icon" src="essential_gimp_for_web_professionals.png" alt=""/>
   <strong>Author:</strong> Michael J. Hammel<br/>
@@ -23,7 +23,7 @@
   scans, using effects and rendering filters - even scripting.
 </p>
 
-<div class="subtitle">The GIMP Pocket Reference</div>
+<h2>The GIMP Pocket Reference</h2>
 <p>
   <img class="icon" src="the_gimp_pocket_reference.png" alt=""/>
   <strong>Author:</strong> Sven Neumann<br/>
@@ -41,7 +41,7 @@
   English, German, Dutch and French versions.
 </p>
 
-<div class="subtitle">Grokking the GIMP</div>
+<h2>Grokking the GIMP</h2>
 <p>
   <img class="icon" src="grokking_the_gimp.png" alt=""/>
   <strong>Author:</strong> Carey Bunks<br/>
@@ -66,7 +66,7 @@
   is available online at the above mentioned website.
 </p>
 
-<div class="subtitle">GIMP - The Official Handbook</div>
+<h2>GIMP - The Official Handbook</h2>
 <p>
   <img class="icon" src="gimp_the_official_handbook.png" alt=""/>
   <strong>Authors:</strong> Olof S. Kylander, Karin Kylander<br/>
@@ -95,7 +95,7 @@
   the above mentioned website.
 </p>
 
-<div class="subtitle">GIMP Essential Reference</div>
+<h2>GIMP Essential Reference</h2>
 <p>
   <img class="icon" src="gimp_esential_reference.png" alt=""/>
   <strong>Author:</strong> Alex Harford<br/>
@@ -112,7 +112,7 @@
   exactly how to do it.
 </p>
 
-<div class="subtitle">The Artist Guide to the Gimp</div>
+<h2>The Artist Guide to the Gimp</h2>
 <p>
   <img class="icon" src="the_artist_guide_to_the_gimp.png" alt=""/>
   <strong>Author:</strong> Michael J. Hammel<br/>
