--- a/contest/index.html
+++ b/contest/index.html
@@ -3,9 +3,9 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Development GIMP Splash Contest</div>
-<div class="subtitle">A Contest Which Makes No Promises</div>
-<div class="subtitle">Coming Soon</div>
+<h1>Development GIMP Splash Contest</h1>
+<h2>A Contest Which Makes No Promises</h2>
+<h2>Coming Soon</h2>
 <p>
   The plan is that you upload your potential image here and we put it
   on a web page that looks vaguely like <a href="../about/splash.html">this</a>
