--- a/develop/index.html
+++ b/develop/index.html
@@ -3,16 +3,16 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Development</div>
-<div class="subtitle">People</div>
+<h1>Development</h1>
+<h2>People</h2>
 <p class="images">
   <img src="people.jpg" width="494" height="394" alt="people"/>
 </p>
-<div class="subtitle">Important GIMP URLs</div>
+<h2>Important GIMP URLs</h2>
 <!--#include virtual="/includes/urls_important.inc" -->
-<div class="subtitle">Important GIMP Development URLs</div>
+<h2>Important GIMP Development URLs</h2>
 <!--#include virtual="/includes/urls_go-developer.inc" -->
-<div class="subtitle">What is going on:</div>
+<h2>What is going on:</h2>
 <p>
   <a href="unstable.html">The Unstable GIMP</a><br />
   The last 10 ChangeLog entries from The Unstable GIMP.
