--- a/links/index.html
+++ b/links/index.html
@@ -3,12 +3,12 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">GIMP Links</div>
+<h1>GIMP Links</h1>
 This page contains the best links to interesting GIMP-sites:
 <!--#include virtual="/includes/urls_important.inc" -->
 
 
-<div class="subtitle">Other Useful URLs</div>
+<h2>Other Useful URLs</h2>
 <ul>
     <li><a href="#maillists">Mailinglists</a></li>
     <li><a href="#org">The GIMP Organization</a></li>
@@ -31,7 +31,7 @@ This page contains the best links to interesting GIMP-sites:
 
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="org">The GIMP (dis)Organization</a></div>
+<h2><a name="org">The GIMP (dis)Organization</a></h2>
 <!--#include virtual="/includes/urls_go-utility.inc" -->
 <p>
   <a href="org.html">More ...</a><br />
@@ -39,11 +39,11 @@ This page contains the best links to interesting GIMP-sites:
 
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="developer">Developer</a></div>
+<h2><a name="developer">Developer</a></h2>
 <!--#include virtual="/includes/urls_go-developer.inc" -->
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="tuts">Tutorials</a></div>
+<h2><a name="tuts">Tutorials</a></h2>
 <p>
   <a href="http://gug.sunsite.dk/?page=tutorials">Tutorials-page from GIMP Usergroup (GUG)</a><br />
   The GUG-website has some cool GIMP-tutorials online.
@@ -54,7 +54,7 @@ This page contains the best links to interesting GIMP-sites:
 </p>
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="more">More GIMP-links</a></div>
+<h2><a name="more">More GIMP-links</a></h2>
 <p>
   <a href="http://gimp.pagina.nl">GIMP-startpagina</a> <small>(Dutch version)</small><br />
   Just one page, but contains the most up-to-date collection of links to GIMP-sites
@@ -76,7 +76,7 @@ This page contains the best links to interesting GIMP-sites:
 
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="clubs">Clubs &amp; Communities</a></div>
+<h2><a name="clubs">Clubs &amp; Communities</a></h2>
 <p>
   <a href="http://www.gimpforce.org">GIMP Usergroup (GUG)</a><br />
   Meet fellow-GIMP-users here and see what they created using GIMP
@@ -91,7 +91,7 @@ This page contains the best links to interesting GIMP-sites:
 </p>
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="created">Created with GIMP</a></div>
+<h2><a name="created">Created with GIMP</a></h2>
 <p>
   <a href="http://gug.sunsite.dk/gallery.php">Galleries from GUG</a><br />
   The largest collection of GIMP-created graphics
@@ -107,7 +107,7 @@ This page contains the best links to interesting GIMP-sites:
 
 
 <p>&nbsp;</p>
-<div class="subtitle"><a name="other">Other Graphics Applications</a></div>
+<h2><a name="other">Other Graphics Applications</a></h2>
 <p>
   <a href="http://www.imagemagick.org/">ImageMagick</a><br />
   A robust collection of tools and libraries that work at the command line as well.
