--- a/links/org.html
+++ b/links/org.html
@@ -3,9 +3,9 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">GIMP Links</div>
+<h1>GIMP Links</h1>
 <p>&nbsp;</p>
-<div class="subtitle">The GIMP (dis)Organization</div>
+<h2>The GIMP (dis)Organization</h2>
 <p>
   <a href="http://www.gimp.org">www.gimp.org</a><br />
   <a href="http:// i.just.love.the.gimp.org"> i.just.love.the.gimp.org</a><br />
