--- a/mail_lists.html
+++ b/mail_lists.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 <!--#include virtual="/includes/urls_maillist.inc" -->
-<div class="subtitle">List Etiquette</div>
+<h2>List Etiquette</h2>
   <p>
   When sending mails to the lists there are some recommendations you should
   follow, at least in The Gimp official lists, but probably are nice
