--- a/programmatic/contest/index.html
+++ b/programmatic/contest/index.html
@@ -2,8 +2,8 @@
 <title>GIMP - Development GIMP Splash Contest</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
-<div class="heading" style="z-index: 5;">Development GIMP Splash Contest</div>
-<div class="subtitle">A Contest Which Makes No Promises</div>
+<h1 style="z-index: 5;">Development GIMP Splash Contest</h1>
+<h2>A Contest Which Makes No Promises</h2>
   <p>Welcome to the
   <a href="http://www.gimp.org">www.gimp.org</a>
   splash image contest.
