--- a/registry.html
+++ b/registry.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Plug-in Registry</div>
+<h1>Plug-in Registry</h1>
 
 
 <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
