--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 <!--This page rendered with mgo-brushes -->
-<div class="heading">Resources</div>
-<div class="subtitle">Included With The GIMP</div>
+<h1>Resources</h1>
+<h2>Included With The GIMP</h2>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
 <div><img style="vertical-align: text-middle;" src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush</div>
 <div><img style="vertical-align: text-middle;" src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush#2</div>
