--- a/resources/gradients/index.html
+++ b/resources/gradients/index.html
@@ -2,8 +2,8 @@
 <title>GIMP - Resources - Gradients</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" --><!--This page rendered with mgo-gradients -->
-<div class="heading">Resources - Gradients</div>
-<div class="subtitle">Included With The GIMP</div>
+<h1>Resources - Gradients</h1>
+<h2>Included With The GIMP</h2>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
 <div>this is the beginning</div>
 <div style="vertical-align: middle;"><img style="vertical-align: middle; padding: 2px" src="Abstract_1.png" width="64" height="32" alt="gradient sample"/>Abstract_1</div>
