--- a/resources/patterns/index.html
+++ b/resources/patterns/index.html
@@ -2,8 +2,8 @@
 <title>GIMP - Resources - Patterns</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" --><!--This page rendered with mgo-patterns -->
-<div class="heading">Resources - Patterns</div>
-<div class="subtitle">Included With The GIMP</div>
+<h1>Resources - Patterns</h1>
+<h2>Included With The GIMP</h2>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
 <div>this is the beginning</div>
 <div><img style="vertical-align: text-middle;" src="3D_Green.png" width="32" height="32" alt="pattern sample"/>3D Green</div>
