--- a/team.html
+++ b/team.html
@@ -3,12 +3,12 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">The GIMP Team</div>
-<div class="subtitle">Core Team</div>
+<h1>The GIMP Team</h1>
+<h2>Core Team</h2>
 <ul>
   <li>Release Maintainer, N. N.</li>
 </ul>
-<div class="subtitle">Web Team</div>
+<h2>Web Team</h2>
 <ul>
   <li>Web Designer, Ville Pätsi</li>
   <li>Web Technician, Henrik Brix Andersen</li>
@@ -21,7 +21,7 @@
   <li>Contributer, Guillermo S. Romero</li>
   <li>Contributer, Nathan C. Summers</li>
 </ul>
-<div class="subtitle">Tutorial Authors</div>
+<h2>Tutorial Authors</h2>
 <ul>
   <li>Adrian Likins</li>
   <li>Atte André Jensen</li>
