--- a/template.html
+++ b/template.html
@@ -3,14 +3,14 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Title goes here</div>
-<div class="subtitle">Sample subtitle</div>
+<h1>Title goes here</h1>
+<h2>Sample subtitle</h2>
 <p>
   Sample text. Sample text. Sample text. Sample text. Sample text.
   Sample text. Sample text. Sample text. Sample text. Sample text. 
   Sample text. Sample text. Sample text. Sample text. Sample text. 
 </p>
-<div class="subtitle">Yet another subtitle</div>
+<h2>Yet another subtitle</h2>
 <p>
 This is an example of an unordered list. Use this for random informational
 things that do not really follow order:
@@ -29,7 +29,7 @@ instead of paragraphs:
 <li>Ordered list item two</li>
 </ol>
 
-<div class="subtitle">Inserting images</div>
+<h2>Inserting images</h2>
 <p class="images">
   <img src="images/thegimp.png" alt="The GIMP"/>
 </p>
