--- a/unix/tile-cache.html
+++ b/unix/tile-cache.html
@@ -3,9 +3,9 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Tile Cache Recommendations</div>
+<h1>Tile Cache Recommendations</h1>
 
-<div class="subtitle">What is the Tile Cache?</div>
+<h2>What is the Tile Cache?</h2>
 <p>
   Image processing can require a lot of memory. GIMP uses the
   operating system services to handle memory, up to a given point,
@@ -25,7 +25,7 @@
   killed or start to malfunction due lack of RAM.
 </p>
 
-<div class="subtitle">How to choose a number for Tile Cache?</div>
+<h2>How to choose a number for Tile Cache?</h2>
 <p>
   There are some ways to decide what value to use as Tile Cache, as
   well as some tricks:
@@ -61,7 +61,7 @@
   </li>
 </ul>
 
-<div class="subtitle">What number to use for Tile Cache?</div>
+<h2>What number to use for Tile Cache?</h2>
 <p>
   Let's guess you prefer the last option, and get a nice value to
   start with. First, you need to get some data about your computer.
@@ -121,8 +121,7 @@
   if the OS swap is worth using or will cause more problems than help.
 </p>
 
-<div class="subtitle">Tuning the value and other helpful
-changes.</div>
+<h2>Tuning the value and other helpful changes.</h2>
 <p>
   There are some reason you want to adjust the value. The basic one is
   changing your computer usage pattern, or changing hardware. That
@@ -151,7 +150,7 @@ changes.</div>
   edit a poster in a computer with 16MB and be fast.
 </p>
 
-<div class="subtitle">Some info about GIMP memory usage.</div>
+<h2>Some info about GIMP memory usage.</h2>
 <p>
   You can also check what memory requirements your images have. The
   bigger the images and the number of undos, the more resources you
