--- a/unix/user_install.html
+++ b/unix/user_install.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Tips and Tricks for user_install</div>
+<h1>Tips and Tricks for user_install</h1>
 <p>
 This is the dialog you see when you open The GIMP for the first time.  
 </p>
@@ -13,7 +13,7 @@ The GIMP installation can use some tweaking here and there to make it appear
 and behave perfectly for you.  Some of these options are set during this 
 dialog.  
 </p>
-<div class="subtitle">Welcome</div>
+<h2>Welcome</h2>
 <p>
 Since this window mentions the GNU General Public License you know it is truly
 a <cite>Welcome</cite> dialog you are entering into. ;) 
@@ -23,18 +23,18 @@ a <cite>Welcome</cite> dialog you are entering into. ;)
 Also, note the "Continue" button.  The GIMP does not even ask that you agree to
 it, merely to continue.  Feel free to press the continue button.
 </p>
-<div class="subtitle">Personal GIMP Directory</div>
+<h2>Personal GIMP Directory</h2>
 <p>
 I have always left this as is.  
 </p>
-<div class="subtitle">User Installation Log</div>
+<h2>User Installation Log</h2>
 <p>
 This window shows you the files that The GIMP will make.  It will have some
 complaints if you told it to install some place that it didn't have permission
 to be.  There is a scroll bar to see all the things The GIMP has for you.  
 (<a href="ui-log.png">screenshot</a>).
 </p>
-<div class="subtitle">GIMP Performance Tuning</div>
+<h2>GIMP Performance Tuning</h2>
 <p>
 Setting your memory usage is not an easy thing.  So much depends on what your needs
 are for the gimp and what hardware you have to work with.  You have two options
@@ -47,7 +47,7 @@ to you if you are encountering memory problems when using the gimp.
 <p>
 /tmp might be a good place for the swap.
 </p>
-<div class="subtitle">Monitor Resolution</div>
+<h2>Monitor Resolution</h2>
 <p>
 Monitor Resolution is the ratio of 
 (<a href="ui-moniter.png">screenshot</a>).
@@ -57,7 +57,7 @@ Monitor Resolution is the ratio of
 <li>Set Manually</li>
 <li>Push the Calibrate Button</li>
 </ol>
-<div class="subtitle">The Calibrate Dialog</div>
+<h2>The Calibrate Dialog</h2>
 <p>
 My monitor was impressively off when I tried the Calibrate Dialog 
 The Calibrate Game is fun to play.  You will need a soft ruler.  
