--- a/windows/download.html
+++ b/windows/download.html
@@ -3,13 +3,13 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Download GIMP for Windows</div>
+<h1>Download GIMP for Windows</h1>
 
 <p>
 <strong>WARNING: none of the GIMPs on these page are official. You take your own chances. The only official GIMPs are those available in source format (not executable) at <a href="ftp://ftp.gimp.org">ftp.gimp.org</a>.</strong>
 </p>
 
-<div class="subtitle"></div>
+<h2></h2>
 <p>
    There is no official version of the GIMP for Windows, and www.gimp.org does not qualify any as such. However, Tor Lillqvist has been making builds for Windows for awhile now, and most Windows' versions of the GIMP are based on his builds.
 </p>
@@ -26,13 +26,13 @@ The easiest GIMP download can probably be found at <a href="http://www2.arnes.si
 Whichever download page you choose, please follow the installation instructions on those pages closely!
 </p>
 
-<div class="subtitle">Should there be easier installations?</div>
+<h2>Should there be easier installations?</h2>
 
 <p>
 Very probably there should. GIMP being free software and all, you are entirely welcome to make such an easy installation and report to us when you have made it.
 </p>
 
-<div class="subtitle">Other GIMPs for Windows</div>
+<h2>Other GIMPs for Windows</h2>
 
 <p>
 We have seen a few reports of people building GIMP under CygWin (which is a sort of Unix that runs in a console on the Windows desktop). If anyone could tell us some more about this, we could report it on these pages.
