--- a/windows/get_started.html
+++ b/windows/get_started.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Getting started with the GIMP</div>
+<h1>Getting started with the GIMP</h1>
 
 <p>
 The GIMP is an incredibly complex tool that rivals expensive, high-end software in the richness of its feature set. It can be quite daunting to start learning to use the GIMP.
