--- a/windows/index.html
+++ b/windows/index.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">GIMP for Windows</div>
+<h1>GIMP for Windows</h1>
 
 <p>
   GIMP is developed mostly under Linux, but it may be compiled for other systems such as Windows too.
@@ -21,11 +21,11 @@
 <li><a href="develop.html">How to help us develop the GIMP further</a> (also: how to report errors)</li>
 </ul>
 
-<div class="subtitle">More to be included on these pages</div>
+<h2>More to be included on these pages</h2>
 
 <ul>
 <li>Installation Instructions</li>
-<li>Mailing Lists & other Windows-specific links</li>
+<li>Mailing Lists &amp; other Windows-specific links</li>
 <li>FAQ's</li>
 <li>How-To's</li>
 <li>Migrating from other tools to the GIMP</li>
