--- a/about/screenshots.html
+++ b/about/screenshots.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Title goes here</div>
-<div class="subtitle">Subtitle goes here</div>
+<h1>Title goes here</h1>
+<h2>Subtitle goes here</h2>
 <p>
   Text goes here...
 </p>
