--- a/about/splash-1.3.html
+++ b/about/splash-1.3.html
@@ -3,71 +3,71 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Development Version Splash History</div>
-<div class="subtitle">1.3 Series</div>
+<h1>Development Version Splash History</h1>
+<h2>1.3 Series</h2>
 <table>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.0 </div>
+  <h2>tarball: 1.3.0</h2>
   <a href="gimp_splashpng.1.1.png"><img src="gimp_splashpng.1.1-t.png" width="102" height="150" alt="1.12"/></a>
   <p>CVS: 1.12<br />
   artist:  nomis</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.1</div>
+  <h2>tarball:  1.3.1</h2>
   <a href="gimp_splashpng.1.1.png"><img src="gimp_splashpng.1.1-t.png" width="102" height="150" alt="1.12"/></a>
   <p>CVS: 1.1<br />
   artist:  nomis</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.2 </div>
+  <h2>tarball: 1.3.2</h2>
   <a href="gimp_splashpng.1.1.png"><img src="gimp_splashpng.1.1-t.png" width="102" height="150" alt="1.12"/></a>
   <p>CVS: 1.1<br />
   artist:  nomis</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.3</div>
+  <h2>tarball:  1.3.3</h2>
   <a href="gimp_splashpng.1.1.png"><img src="gimp_splashpng.1.1-t.png" width="102" height="150" alt="1.12"/></a>
   <p>CVS: 1.1<br />
   artist:  nomis</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.4 </div>
+  <h2>tarball: 1.3.4</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
   artist: nomis, Sven</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.5</div>
+  <h2>tarball:  1.3.5</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
   artist: nomis, Sven</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.6 </div>
+  <h2>tarball: 1.3.6</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
   artist: nomis, Sven</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.7</div>
+  <h2>tarball:  1.3.7</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
   artist: nomis, Sven</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.8 </div>
+  <h2>tarball: 1.3.8</h2>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt="1.2"/></a>
   <p>CVS: 1.2<br />
   artist: nomis, Sven</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.9</div>
+  <h2>tarball:  1.3.9</h2>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a>
   <p>CVS: 1.4<br />
   artist: Sven, Tim Pritlove</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.3.10 </div>
+  <h2>tarball: 1.3.10</h2>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a>
   <p>CVS: 1.4<br />
   artist: Sven and Tim Pritlove</p>
 </td><td>
-  <div  class="subtitle">tarball:  1.3.11</div>
+  <h2>tarball:  1.3.11</h2>
   <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.6-t.png" width="150" height="145" alt="1.6"/></a>
   <p>CVS: 1.?<br />
   artist: unknown</p>
