--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <link href="/style/extended.css" media="screen" rel="stylesheet" title="www.gimp.org - Administration" type="text/css" />
   <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
   <!--#include virtual="/includes/wgo-admin-init.xhtml" -->
-  <div class="heading">gimp.org Site Administration</div>
+  <h1>gimp.org Site Administration</h1>
   <p>
     Welcome to the www.gimp.org web administration.  With this, you will
     be able to do a variety of things.
