--- a/resources/index.html
+++ b/resources/index.html
@@ -3,8 +3,8 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Resources</div>
-<div class="subtitle">Included With The GIMP</div>
+<h1>Resources</h1>
+<h2>Included With The GIMP</h2>
 <p>
   More than just a bunch of tools, The GIMP has stuff too ....
 </p>
@@ -14,7 +14,7 @@
   <li><a href="palettes/index.html">Palettes</a></li>
   <li><a href="patterns/index.html">Patterns</a></li>
 </ul>
-<div class="subtitle">Home Grown</div>
+<h2>Home Grown</h2>
 <p>
   Resources The GIMP makes space for in your home directory. Someone
   please fix this text.
