os2/index.html, removed this file. os2/index.htrw, added this file.
* os2/index.html, removed this file.
* os2/index.htrw, added this file.
* admin/gimp-web-urls, added some more.
* unix/man-gimptool-1.2.html, fixed some bad urls.
* unix/user_install.html, removed this file.
* unix/tile_cache.html, removed this file.
* unix/user_install.htrw, added this converted file.
* unix/howtos/tile_cache.htrw, added this converted file.
* unix/index.html, adjusted things here.
* admin/gimp-web-urls, added some, alphabetized some also.

--- a/unix/man-gimptool-1.2.html
+++ b/unix/man-gimptool-1.2.html
@@ -291,13 +291,13 @@ process of many gtk apps.
 <A NAME="lbAG">&nbsp;</A>
 <H2>SEE ALSO</H2>
 
-<B><A HREF="man-gimprc.1.html">gimprc</A></B>(5),
+<B><A HREF="man-gimp-1.2.html">gimp</A></B>(1),
 
-<B><A HREF="man-gimprc-1.2.html">gimprc</A></B>(1),
+<B><A HREF="man-gimprc.1.html">gimprc</A></B>(5),
 
 <B><A HREF="man-gimp-remote-1.2.html">gimp-remote</A></B>(1)
 
-<B><A HREF="man-gtk-config-remote-1.2.html">gtk-config</A></B>(1)
+<B><A HREF="man-gtk-config.html">gtk-config</A></B>(1)
 
 <P>
 <A NAME="lbAH">&nbsp;</A>
@@ -337,6 +337,5 @@ supporting documentation.
 This document was created by
 <A HREF="http://www.w3.org/Tools/man2html.html">man2html</A>,
 using the manual pages.<BR>
-Time: 04:14:14 GMT, September 27, 2002
 </BODY>
 </HTML>
