--- a/unix/man-gtk-config.html
+++ b/unix/man-gtk-config.html
@@ -62,7 +62,7 @@ and --libs options.  This option must be specified before any
 <a name="lbAF"> </a>
 <h2>SEE ALSO</h2>
 
-<B><A HREF="man-gimp.1.html">gimp</A></B>(5),
+<B><A HREF="man-gimp.1.2.html">gimp</A></B>(5),
 
 <B><A HREF="man-gimptool-1.2.html">gimptool</A></B>(1),
 
@@ -88,7 +88,6 @@ supporting documentation.
 </dd></dl>
 <hr>
 This document was created by
-<a href="http://mmmaybe.gimp.orghttp://www.w3.org/Tools/man2html.html">man2html</a>,
+<a href="http://www.w3.org/Tools/man2html.html">man2html</a>,
 using the manual pages.<br>
-Time: 08:49:53 GMT, September 30, 2002
 </body></html>
